--- a/templates/includes/main-nav.html
+++ b/templates/includes/main-nav.html
@@ -32,7 +32,7 @@
                 <a href="" class="dropdown-item">Workout Clothing</a>
                 <a href="" class="dropdown-item">Running Clothing</a>
                 <a href="" class="dropdown-item">Footwear</a>
-                <a href="" class="dropdown-item">All Clothing</a>
+                <a href="{% url 'products' %}" class="dropdown-item">All Clothing</a>
             </div>
         </li>
 
