--- a/templates/includes/main-nav.html
+++ b/templates/includes/main-nav.html
@@ -29,10 +29,10 @@
                 Clothing
             </a>
             <div class="dropdown-menu border-0" aria-labelledby="clothing-link">
-                <a href="" class="dropdown-item">Workout Clothing</a>
-                <a href="" class="dropdown-item">Running Clothing</a>
-                <a href="" class="dropdown-item">Footwear</a>
-                <a href="{% url 'products' %}" class="dropdown-item">All Clothing</a>
+                <a href="{% url 'products' %}?category=activewear,essentials" class="dropdown-item">Workout Clothing/activewera-Essentials</a>
+                <a href="{% url 'products' %}?category=jeans" class="dropdown-item">Running Clothing/Jeans</a>
+                <a href="{% url 'products' %}?category=shirts" class="dropdown-item">Footwear/shirts</a>
+                <a href="{% url 'products' %}?category=activewear,essentials,jeans,shirts" class="dropdown-item">All Clothing</a>
             </div>
         </li>
 
@@ -41,10 +41,10 @@
                 Special Offers
             </a>
             <div class="dropdown-menu border-0" aria-labelledby="specials-link">
-                <a href="" class="dropdown-item">New Arrivals</a>
-                <a href="" class="dropdown-item">Deals</a>
-                <a href="" class="dropdown-item">Clearance</a>
-                <a href="" class="dropdown-item">All Specials</a>
+                <a href="{% url 'products' %}?category=new_arrivals" class="dropdown-item">New Arrivals</a>
+                <a href="{% url 'products' %}?category=deals" class="dropdown-item">Deals</a>
+                <a href="{% url 'products' %}?category=clearance" class="dropdown-item">Clearance</a>
+                <a href="{% url 'products' %}?category=new_arrivals,deals,clearance" class="dropdown-item">All Specials</a>
             </div>
         </li>
     </ul>
