--- a/templates/includes/main-nav.html
+++ b/templates/includes/main-nav.html
@@ -1,14 +1,14 @@
 <div class="collapse navbar-collapse" id="main-nav">
     <ul class="navbar-nav w-auto mx-auto">
         <li class="nav-item dropdown">
-            <a class="logo-font font-weight-bold nav-link text-black mr-5" href="#" id="classes-link" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-                FITNESS CLASSES
+            <a class="logo-font font-weight-bold nav-link text-black mr-5" href="#" id="all-products-link" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+                All Products
             </a>
-            <div class="dropdown-menu border-0" aria-labelledby="classes-link">
-                <a href="" class="dropdown-item">CARDIO</a>
-                <a href="" class="dropdown-item ">SCULPT & TONE</a>
-                <a href="" class="dropdown-item ">MIND & BODY</a>
-                <a href="" class="dropdown-item">FUNCTIONAL</a>
+            <div class="dropdown-menu border-0" aria-labelledby="all-products-link">
+                <a href="{% url 'products' %}?sort=price&direction=asc" class="dropdown-item">By Price</a>
+                <a href="{% url 'products' %}?sort=rating&direction=desc" class="dropdown-item ">By Rating</a>
+                <a href="{% url 'products' %}?sort=category&direction=asc" class="dropdown-item ">By Category</a>
+                <a href="{% url 'products' %}" class="dropdown-item">All Products</a>
             </div>
         </li>
 
