--- a/home/templates/home/index.html
+++ b/home/templates/home/index.html
@@ -14,8 +14,9 @@
         <div class="row h-100">
             <div class="col-7 col-md-6 my-auto">
                 <h1 class="display-4 logo-font text-black">
-                    The new collections are here
+                    THIS MONTH’S FRESH FITS
                 </h1>
+                <p>Brand new drops, brand new reasons to go gym. You’re welcome.</p>
                 <div class="my-5">
                     <h4>
                         <a href="{% url 'products' %}" class="shop-now-button btn btn-lg rounded-0 text-uppercase py-3">Shop Now</a>
