--- a/templates/includes/main-nav.html
+++ b/templates/includes/main-nav.html
@@ -12,27 +12,15 @@
             </div>
         </li>
 
-        <li class="nav-item dropdown">
-            <a class="logo-font font-weight-bold nav-link text-black mr-5" href="#" id="membership-link" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-                MEMBERSHIPS
-            </a>
-            <div class="dropdown-menu border-0" aria-labelledby="membership-link">
-                <a href="" class="dropdown-item">All Gym Membership Options</a>
-                <a href="" class="dropdown-item">Gym Offers</a>
-                <a href="" class="dropdown-item">Gym Day Pass</a>
-                <a href="" class="dropdown-item">Bring A Guest</a>
-            </div>
-        </li>
-
-        <li class="nav-item dropdown">
+            <li class="nav-item dropdown">
             <a class="logo-font font-weight-bold nav-link text-black mr-5" href="#" id="clothing-link" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
                 Clothing
             </a>
             <div class="dropdown-menu border-0" aria-labelledby="clothing-link">
-                <a href="{% url 'products' %}?category=activewear,essentials" class="dropdown-item">Workout Clothing/activewera-Essentials</a>
-                <a href="{% url 'products' %}?category=jeans" class="dropdown-item">Running Clothing/Jeans</a>
-                <a href="{% url 'products' %}?category=shirts" class="dropdown-item">Footwear/shirts</a>
-                <a href="{% url 'products' %}?category=activewear,essentials,jeans,shirts" class="dropdown-item">All Clothing</a>
+                <a href="{% url 'products' %}?category=activewear" class="dropdown-item">Workout Clothing</a>
+                <a href="{% url 'products' %}?category=jeans" class="dropdown-item">Running Clothing</a>
+                <a href="{% url 'products' %}?category=shirts" class="dropdown-item">Footwear</a>
+                <a href="{% url 'products' %}?category=activewear,jeans,shirts" class="dropdown-item">All Clothing</a>
             </div>
         </li>
 
