--- a/static/css/base.css
+++ b/static/css/base.css
@@ -6,7 +6,7 @@ body {
     background: url('/media/MandW.jpg') no-repeat center center fixed;
     background-size: cover;
     height: calc(100vh - 164px);
-    color: #555;
+    color: #76885B;
     font-family: 'Lato';
 }
 
@@ -79,10 +79,10 @@ body {
 	top: 0;
 	left: 0;
 	position: fixed;
-	background: white;
+	background: #ADBC9F;
 	z-index: -1;
 }
-
+ 
 a.category-badge > span.badge:hover {
     background: #212529 !important;
     color: #fff !important;
