updated database with new products & categories

--- a/static/css/base.css
+++ b/static/css/base.css
@@ -6,7 +6,7 @@ body {
     background: url('/media/MandW.jpg') no-repeat center center fixed;
     background-size: cover;
     height: calc(100vh - 164px);
-    color: #76885B;
+    color: #9ba192;
     font-family: 'Lato';
 }
 
