fixed some image problems in database & added more categories

--- a/templates/includes/main-nav.html
+++ b/templates/includes/main-nav.html
@@ -18,9 +18,9 @@
             </a>
             <div class="dropdown-menu border-0" aria-labelledby="clothing-link">
                 <a href="{% url 'products' %}?category=activewear" class="dropdown-item">Workout Clothing</a>
-                <a href="{% url 'products' %}?category=jeans" class="dropdown-item">Running Clothing</a>
-                <a href="{% url 'products' %}?category=shirts" class="dropdown-item">Footwear</a>
-                <a href="{% url 'products' %}?category=activewear,jeans,shirts" class="dropdown-item">All Clothing</a>
+                <a href="{% url 'products' %}?category=swimwear" class="dropdown-item">Swimwear</a>
+                <a href="{% url 'products' %}?category=footwear" class="dropdown-item">Footwear</a>
+                <a href="{% url 'products' %}?category=activewear,swimwear,footwear" class="dropdown-item">All Clothing</a>
             </div>
         </li>
 
