--- a/templates/includes/main-nav.html
+++ b/templates/includes/main-nav.html
@@ -20,10 +20,29 @@
                 <a href="{% url 'products' %}?category=activewear" class="dropdown-item">Workout Clothing</a>
                 <a href="{% url 'products' %}?category=swimwear" class="dropdown-item">Swimwear</a>
                 <a href="{% url 'products' %}?category=footwear" class="dropdown-item">Footwear</a>
+                <a href="{% url 'products' %}?category=accessories" class="dropdown-item">Accessories</a>
                 <a href="{% url 'products' %}?category=activewear,swimwear,footwear" class="dropdown-item">All Clothing</a>
             </div>
         </li>
 
+        <li class="nav-item dropdown">
+            <a class="logo-font font-weight-bold nav-link text-black mr-5" href="#" id="nutrition-link" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+                Sports Nutrition
+            </a>
+            <div class="dropdown-menu border-0" aria-labelledby="nutrition-link">
+                <a href="{% url 'products' %}?category=sports_nutrition" class="dropdown-item">Sports Nutrition</a>
+            </div>
+        </li>
+
+        <li class="nav-item dropdown">
+            <a class="logo-font font-weight-bold nav-link text-black mr-5" href="#" id="equipment-link" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+                Gym Equipment
+            </a>
+            <div class="dropdown-menu border-0" aria-labelledby="equipment-link">
+                <a href="{% url 'products' %}?category=gym_equipment" class="dropdown-item">Gym Equipment</a>
+            </div>
+        </li>
+        
         <li class="nav-item dropdown">
             <a class="logo-font font-weight-bold nav-link text-black" href="#" id="specials-link" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
                 Special Offers
