--- a/templates/allauth/account/signup.html
+++ b/templates/allauth/account/signup.html
@@ -5,17 +5,20 @@
 {% block head_title %}{% trans "Signup" %}{% endblock %}
 
 {% block inner_content %}
-<h2>{% trans "Sign Up" %}</h2>
+<hr>
+<h1 class="logo-font mb-4">{% trans "Sign Up" %}</h1>
+<hr>
 
-<p>{% blocktrans %}Already have an account? Then please <a href="{{ login_url }}">sign in</a>.{% endblocktrans %}</p>
+<p class="text-main">{% blocktrans %}Already have an account? Then please <a class="text-main font-weight-bold" href="{{ login_url }}">sign in</a>.{% endblocktrans %}</p>
 
 <form class="signup" id="signup_form" method="post" action="{% url 'account_signup' %}">
   {% csrf_token %}
   {{ form|crispy }}
   {% if redirect_field_value %}
-  <input type="hidden" name="{{ redirect_field_name }}" value="{{ redirect_field_value }}" />
+  <input type="hidden" name="{{ redirect_field_name }}" value="{{ redirect_field_value }}">
   {% endif %}
-  <button class="btn btn-success" type="submit">{% trans "Sign Up" %} &raquo;</button>
+  <a class="btn btn-outline rounded-0" href="{% url 'account_login' %}">Back to Login</a>
+  <button type="submit">{% trans "Sign Up" %}</button>
 </form>
 
 {% endblock %}
